[CrOS Tether] Fix a crash during shutdown.

The crash was caused because NetworkConfigurationRemover was destroyed
before WifiHotspotDisconnector. Side note: there is a bug filed
(crbug.com/761532) to clean this up. It does not scale, and it is prone
to errors like this crash.

Bug: 762318, 672263
Change-Id: Ie91976af96fde96dcd4bdf0902b26a8c6fae7300
Reviewed-on: https://chromium-review.googlesource.com/664481
Reviewed-by: Ryan Hansberry <hansberry@chromium.org>
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501676}
Former-commit-id: 7a98f47e043a5581eb610b58b047a23ba207a145